# Traxxas-MPC_Planning_ROSpkg

./: joy2can_planning.sh
mpc_planning/: CMakeLists.txt  package.xml
mpc_planning/include/: iLQRsolver.h  mpc_planning_node.h
mpc_planning/launch/: control_traxxas.launch
mpc_planning/src/: mpc_planning_node.cpp
pos_est/include/: TimeVaryingKF_heading.h
pos_est/src/: pos_est_node.cpp
ros2can/: CMakeLists.txt  package.xml
ros2can/include/: ros2can_node.h
ros2can/src/: ros2can_node.cpp
