<?xml version="1.0"?>
<package>
  <name>ros2can</name>
  <version>0.0.1</version>
  <description>ros2can</description>
  <license>Apache License 2.0</license>
  <author email="chanhoko@kaist.ac.kr">Chanho Ko</author>
  <maintainer email="chanhoko@kaist.ac.kr">Chanho Ko</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>can_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>can_msgs</run_depend>
  <export></export>
</package>
